# nesy-pqpatch

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
containers/: README.md
corpus/: README.md
corpus/tier1/: mutate.py
corpus/tier2/file-signing-cli/: build.yaml  sites.yaml
corpus/tier2/keyvault-syncd/: build.yaml  sites.yaml
corpus/tier2/secure-archive-tool/: build.yaml  sites.yaml
corpus/tier2/telemetry-signer/: build.yaml  sites.yaml
corpus/tier2/token-broker/: build.yaml  sites.yaml
corpus/traps/: SCHEMA.md
corpus/traps/dev/: classical-fallback-sign-001.yaml  fail-open-degenerate-sig-001.yaml  fail-open-verify-001.yaml  fixed-seed-sign-001.yaml  hyb-downgrade-envelope-001.yaml  (+4 more)
docs/: STATUS.md  rule-authoring.md
docs/ADR/: ADR-000-template.md  ADR-001-l2-dataflow-engine.md  ADR-002-l3-reduced-scope-javac-compile.md  ADR-003-pure-python-diff-apply.md  ADR-004-evaluation-robustness-upgrades.md
policy/: README.md  default.yaml  schema.json  strict.yaml
src/pqpatch/: __init__.py  cli.py  loop.py  model.py  policy.py  settings.py
tests/integration/: test_baselines.py  test_detector_tier2.py  test_l2_verify.py  test_l3_build.py  test_l4_roundtrip.py  test_smoke.py  test_stock_l1.py  test_tier2_archive.py  test_tier2_broker.py  test_tier2_telemetry.py  test_tier2_vault.py
tests/rules/: test_l1_fixtures.py  test_l1_new_rules.py  test_l1_primitive_family.py  test_l1_randomness.py  test_l2_ceiling_rules.py  test_l2_hybrid_completeness.py  test_l2_key_confusion.py  test_l2_param_flow.py  test_l2_seed_provenance.py
tests/support/: diffgen.py
tests/unit/: test_adjudicate.py  test_cache.py  test_canonical.py  test_classify.py  test_detector_engine.py  test_diffapply.py  test_diffutil.py  test_java_flow.py  test_l3_detail_scrub.py  test_metrics.py  test_mutate.py  test_perturb.py  test_response_format.py  test_run_tables.py  test_trap_run.py  test_traps.py
(+140 files in other folders)
