[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqpatch"
version = "0.1.0"
description = "NeSy-PQPatch: rule-verified neuro-symbolic pipeline for post-quantum cryptographic code migration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Safayat Bin Hakim" }]

dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "typer>=0.12",
    "httpx>=0.27",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
    "scipy-stubs",
]
attest = [
    "liboqs-python",
]
local-llm = [
    "vllm",
]

[project.scripts]
pqpatch = "pqpatch.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "UP", "B"]
ignore = ["S101"]  # allow assert in tests; still linted elsewhere

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]
# RuleStatus.PASS/FAIL/ERROR/SKIPPED are verification outcomes, not secrets;
# bandit's hardcoded-password heuristic pattern-matches on the name "PASS".
"src/pqpatch/model.py" = ["S105"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["pqpatch"]
mypy_path = "src"
exclude = ["tests/", "corpus/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: docker/build-dependent tests, slower",
    "offline: must pass with network disabled (PQPATCH_OFFLINE=1)",
]

[tool.coverage.run]
source = ["src/pqpatch"]
omit = ["src/pqpatch/proposer/backend_a.py", "src/pqpatch/proposer/backend_b.py", "src/pqpatch/proposer/backend_c.py"]
